<resources>
    <string name="app_name">OU Indoors</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="need_to_register">Need to register?</string>
    <string name="click_here">Click here</string>
    <string name="chipshots_tracker">OU Indoors: Professional Indoor Navigation</string>
    <string name="cPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="click_the_menu_to_begin">Click the menu to begin</string>
    <string name="emailWelcome">Email</string>
    <string name="welcome">Welcome</string>
    <string name="map_icon">map icon</string>
    <string name="dispay_name">Dispay Name</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordD">password</string>
    <string name="display_name">Display Name:</string>
    <string name="emailP">Email:</string>
    <string name="submit">Submit</string>
    <string name="want_to_update_your_email">Update Email</string>
    <string name="want_to_update_your_password">Update Password?</string>
    <string name="displayname">displayName</string>
    <string name="emailP2">email</string>
</resources>
