<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="21sp"
        android:textStyle="bold"
        android:id="@+id/dialogTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordD"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel"
            android:id="@+id/dialogCancel"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/confirm"
            android:id="@+id/dialogConfirm"
            tools:ignore="RtlHardcoded" />


    </RelativeLayout>

</LinearLayout>