<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.defunkt.myapplication.HomePageFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="148dp"
            android:layout_height="42dp"
            android:layout_marginBottom="150dp"
            android:layout_marginRight="38dp"
            android:text="@string/emailWelcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/lblBegin"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.201" />

        <TextView
            android:id="@+id/lblBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_the_menu_to_begin"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintVertical_bias="0.019" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="202dp"
            android:layout_height="184dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/map_icon"
            app:layout_constraintBottom_toTopOf="@+id/lblEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/map_icon" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
